--- a/20-news-group-classification.ipynb
+++ b/20-news-group-classification.ipynb
@@ -310,32 +310,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4646, 15000) (4646, 20)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from imblearn.over_sampling import SMOTE\n",
-    "#Over-sampling: SMOTE\n",
-    "#SMOTE (Synthetic Minority Oversampling TEchnique) consists of synthesizing elements for the minority class, \n",
-    "#based on those that already exist. It works randomly picking a point from the minority class and computing \n",
-    "#the k-nearest neighbors for this point.The synthetic points are added between the chosen point and its neighbors.\n",
-    "#We'll use ratio='minority' to resample the minority class.\n",
-    "smote = SMOTE('minority')\n",
-    "\n",
-    "X_sm, y_sm = smote.fit_sample(x_train, y_train)\n",
-    "print(X_sm.shape, y_sm.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 113,
    "metadata": {},
    "outputs": [
@@ -370,6 +344,7 @@
     }
    ],
    "source": [
+    "#let us build a basic model\n",
     "model = Sequential()\n",
     "model.add(Dense(512, input_shape=(vocab_size,)))\n",
     "model.add(Activation('relu'))\n",
@@ -427,6 +402,18 @@
     "                    epochs=num_epochs,\n",
     "                    verbose=2,\n",
     "                    validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score, acc = model.evaluate(x_test, y_test,\n",
+    "                       batch_size=batch_size, verbose=2)\n",
+    "\n",
+    "print('Test accuracy:', acc)"
    ]
   },
   {
@@ -510,26 +497,6 @@
     "\n",
     "print('Summary of the built model...')\n",
     "print(model.summary())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test accuracy: 0.8847619041942415\n"
-     ]
-    }
-   ],
-   "source": [
-    "score, acc = model.evaluate(x_test, y_test,\n",
-    "                       batch_size=batch_size, verbose=2)\n",
-    "\n",
-    "print('Test accuracy:', acc)\n"
    ]
   },
   {
@@ -829,49 +796,68 @@
     "precision = np.diag(cm) / np.sum(cm, axis = 0)\n",
     "\n",
     "print(recall)\n",
+    "\n",
     "print(precision)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let us try some sampling technique to remove class imbalance\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "#Over-sampling: SMOTE\n",
+    "#SMOTE (Synthetic Minority Oversampling TEchnique) consists of synthesizing elements for the minority class, \n",
+    "#based on those that already exist. It works randomly picking a point from the minority class and computing \n",
+    "#the k-nearest neighbors for this point.The synthetic points are added between the chosen point and its neighbors.\n",
+    "#We'll use ratio='minority' to resample the minority class.\n",
+    "smote = SMOTE('minority')\n",
+    "\n",
+    "X_sm, y_sm = smote.fit_sample(x_train, y_train)\n",
+    "print(X_sm.shape, y_sm.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 3357 samples, validate on 840 samples\n",
+      "Train on 3716 samples, validate on 930 samples\n",
       "Epoch 1/10\n",
-      " - 3s - loss: 0.0015 - acc: 1.0000 - val_loss: 0.3607 - val_acc: 0.8940\n",
+      " - 10s - loss: 0.0593 - acc: 0.9839 - val_loss: 0.2841 - val_acc: 0.9075\n",
       "Epoch 2/10\n",
-      " - 2s - loss: 0.0011 - acc: 1.0000 - val_loss: 0.3542 - val_acc: 0.8905\n",
+      " - 2s - loss: 0.0138 - acc: 0.9995 - val_loss: 0.1916 - val_acc: 0.9441\n",
       "Epoch 3/10\n",
-      " - 2s - loss: 0.0011 - acc: 1.0000 - val_loss: 0.3550 - val_acc: 0.8929\n",
+      " - 3s - loss: 0.0068 - acc: 0.9997 - val_loss: 0.1903 - val_acc: 0.9387\n",
       "Epoch 4/10\n",
-      " - 2s - loss: 9.0081e-04 - acc: 1.0000 - val_loss: 0.3524 - val_acc: 0.8940\n",
+      " - 3s - loss: 0.0057 - acc: 0.9997 - val_loss: 0.1924 - val_acc: 0.9376\n",
       "Epoch 5/10\n",
-      " - 2s - loss: 7.1126e-04 - acc: 1.0000 - val_loss: 0.3546 - val_acc: 0.8929\n",
+      " - 2s - loss: 0.0054 - acc: 0.9997 - val_loss: 0.1889 - val_acc: 0.9452\n",
       "Epoch 6/10\n",
-      " - 2s - loss: 6.8767e-04 - acc: 1.0000 - val_loss: 0.3728 - val_acc: 0.8929\n",
+      " - 2s - loss: 0.0051 - acc: 0.9997 - val_loss: 0.1899 - val_acc: 0.9430\n",
       "Epoch 7/10\n",
-      " - 2s - loss: 6.4011e-04 - acc: 1.0000 - val_loss: 0.3604 - val_acc: 0.8940\n",
+      " - 3s - loss: 0.0050 - acc: 0.9997 - val_loss: 0.1897 - val_acc: 0.9419\n",
       "Epoch 8/10\n",
-      " - 2s - loss: 4.6965e-04 - acc: 1.0000 - val_loss: 0.3631 - val_acc: 0.8940\n",
+      " - 2s - loss: 0.0048 - acc: 0.9997 - val_loss: 0.1889 - val_acc: 0.9409\n",
       "Epoch 9/10\n",
-      " - 2s - loss: 4.3995e-04 - acc: 1.0000 - val_loss: 0.3611 - val_acc: 0.8940\n",
+      " - 2s - loss: 0.0047 - acc: 0.9997 - val_loss: 0.1900 - val_acc: 0.9398\n",
       "Epoch 10/10\n",
-      " - 2s - loss: 3.9800e-04 - acc: 1.0000 - val_loss: 0.3579 - val_acc: 0.8988\n"
+      " - 2s - loss: 0.0047 - acc: 0.9997 - val_loss: 0.1889 - val_acc: 0.9409\n"
      ]
     }
    ],
    "source": [
-    "#not much improvement using class weights\n",
     "from sklearn.utils import class_weight\n",
     "class_weight = class_weight.compute_class_weight('balanced' ,np.unique(y_train_labels) ,y_train_labels)\n",
     "num_epochs =10\n",
     "batch_size = 128\n",
-    "history = model.fit(x_train, y_train,\n",
+    "history = model.fit(X_sm, y_sm,\n",
     "                    batch_size=batch_size,\n",
     "                    epochs=num_epochs,\n",
     "                    verbose=2,\n",
@@ -881,7 +867,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.8904761907032558\n"
+     ]
+    }
+   ],
+   "source": [
+    "score, acc = model.evaluate(x_test, y_test,\n",
+    "                       batch_size=batch_size, verbose=2)\n",
+    "\n",
+    "print('Test accuracy:', acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1010,7 @@
        "Text(0.5, 1.0, 'Average precision score, micro-averaged over all classes: AP=0.94')"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1039,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
