--- a/20-news-group-classification.ipynb
+++ b/20-news-group-classification.ipynb
@@ -52,7 +52,7 @@
     "# Read and add data from file to a list\n",
     "i=0\n",
     "for f in labelled_files:\n",
-    "    data_list.append((f,label_names[label_index[i]],Path(f).read_text()))\n",
+    "    data_list.append((f,label_names[label_index[i]],Path(f).read_text(errors='surrogateescape')))\n",
     "    i += 1\n",
     "\n",
     "# We have training data available as dictionary filename, category, data\n",
@@ -1119,7 +1119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
